1. Метод .of [#70623 #368425] - corrected